[package]
name = "sled-wrapper"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.26"
chrono = { version = "0.4.10", features = ["serde"] }
