[package]
name = "sled-connector"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.30.3"
datamodel = { path = "../../../libs/datamodel/core" }
migration-connector = { path = "../migration-connector" }
anyhow = "1.0.26"
thiserror = "1.0.9"
tracing = "0.1.10"
tracing-futures = "0.2.0"
async-trait = "0.1.17"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
