[package]
name = "sled-migration-connector"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
sled-wrapper = { path = "../../../libs/sled-wrapper" }
migration-connector = { path = "../migration-connector" }
async-trait = "0.1.22"
datamodel = { path = "../../../libs/datamodel/core" }
tracing = "0.1.12"
